# minimax-performance-tools

./: README.md  pyproject.toml  setup.py
examples/: demo.py  quickstart.py
minimax_tools/: __init__.py  benchmark.py  network_utils.py  utils.py
tests/: test_basic.py
